--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div id="result"></div>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="App.js"></script>
 </body>
 
 </html>
